--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "former.js",
+  "name": "@devardha/former.js",
   "version": "1.0.0",
   "description": "A simple, flexible, and easy-to-use form validator for javascript",
   "main": "index.js",
